Uspesno implementiran GraphQL server po prvi put

--- a/WebApp5/appsettings.json
+++ b/WebApp5/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApp5Db": "Server=(localdb)\\mssqllocaldb;Database=WebApp5;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
